# example-ai-repo

./: LICENSE  README.md  pyproject.toml  start_ui.sh  the_haiku_poet.py
src/example_ai_repo/: streamlit_ui.py
