[tool.poetry]
name = "example-ai-repo"
version = "0.1.0"
description = "An example of a repo that demonstrates the use of projects and poetry."
authors = ["Ahmed Mohamed <ahmed.akod@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.59"
dotenv = "^0.9.9"
langchain = "^0.3.25"
langchain-google-genai = "^2.1.4"
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
